--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,22 @@
 asttokens==2.0.8
 backcall==0.2.0
+contourpy==1.0.5
+cycler==0.11.0
 debugpy==1.6.3
 decorator==5.1.1
 entrypoints==0.4
 executing==1.1.1
+fonttools==4.37.4
 imageio==2.22.1
 ipykernel==6.16.0
 ipython==8.5.0
+ipython-genutils==0.2.0
 jedi==0.18.1
 joblib==1.2.0
 jupyter-client==7.3.5
 jupyter-core==4.11.1
+kiwisolver==1.4.4
+matplotlib==3.6.1
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.6
 networkx==2.8.7
@@ -37,6 +43,7 @@ scipy==1.9.1
 six==1.16.0
 sklearn==0.0
 stack-data==0.5.1
+tabulate==0.9.0
 threadpoolctl==3.1.0
 tifffile==2022.8.12
 tornado==6.2
